fix: remove deprecated api